--- a/baselibrary/src/main/res/layout/activity_recycleviewalluses.xml
+++ b/baselibrary/src/main/res/layout/activity_recycleviewalluses.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="left"
         android:orientation="vertical">
 
         <TextView
@@ -72,11 +72,5 @@
             android:padding="20dp"
             android:text="RecycleView-PullToRefresh" />
 
-        <TextView
-            android:id="@+id/tv10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="RecycleView-ExpandableItem" />
     </LinearLayout>
 </ScrollView>
